--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ioredis": "^5.3.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "libsignal-protocol": "^1.3.8",
     "md5": "^2.3.0",
     "mocha": "^10.0.0",
     "moment-timezone": "^0.5.40",
