--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "docker:run": "docker run -e .env -p 8000:3000 -d isss-backend"
   },
   "dependencies": {
+    "@privacyresearch/libsignal-protocol-typescript": "^0.0.16",
+    "@signalapp/libsignal-client": "^0.39.3",
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.1",
     "@types/cheerio": "^0.22.31",
